--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-yt-dlp>=2024.12.23
+# Web Framework
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
 python-multipart==0.0.19
-pydantic==2.4.2
-moviepy==1.0.3
+
+# Data Validation
+pydantic==2.9.2
+pydantic-settings==2.6.1
+
+# Video Download & Processing
+yt-dlp==2024.12.23
+moviepy==2.1.1
+
+# HTTP & Streaming (dependências explícitas)
+httpx==0.27.2
