--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 fastapi==0.115.0
 uvicorn[standard]==0.32.0
 python-multipart==0.0.19
+starlette==0.40.0
 
 # Data Validation
 pydantic==2.9.2
@@ -11,5 +12,5 @@ pydantic-settings==2.6.1
 yt-dlp==2024.12.23
 moviepy==2.1.1
 
-# HTTP & Streaming (dependências explícitas)
+# HTTP & Streaming
 httpx==0.27.2
